--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erik Launcher</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
+    <link rel="stylesheet" href="main.css" type="text/css">
     <style>
         html, body {
             font-family: 'Open Sans', 'sans-serif';
