Imported Pacifico font for the header.

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erik Launcher</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+    </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
     <link rel="stylesheet" href="main.css" type="text/css">
     <style>
@@ -21,9 +24,9 @@
     </style>
 </head>
 <body>
-    <div>
+    <div id="header">
         <h1>
-            FitMe Shopping Assistant
+            FitMe
         </h1>
     </div>
     <div class="content">
