Divided popup body into header, navigation and content with IDs.

--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,10 @@
             FitMe
         </h1>
     </div>
-    <div class="content">
+    <div id="navigation">
+
+    </div>
+    <div id="content">
         <p>Content stub</p>
     </div>
     <script src="popup.js"></script>
