Added three DIVs to the navigation.

--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erik Launcher</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap');
     </style>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
     <link rel="stylesheet" href="main.css" type="text/css">
     <style>
         html, body {
@@ -30,7 +29,15 @@
         </h1>
     </div>
     <div id="navigation">
-
+        <div class="nav-item nav-active">
+            Fitment
+        </div>
+        <div class="nav-item">
+            Preferences
+        </div>
+        <div class="nav-item">
+            Profile
+        </div>
     </div>
     <div id="content">
         <p>Content stub</p>
