Navigation items have click listeners.

--- a/popup.html
+++ b/popup.html
@@ -29,13 +29,13 @@
         </h1>
     </div>
     <div id="navigation">
-        <div class="nav-item nav-active">
+        <div id="nav-fitment" class="nav-item nav-active">
             Fitment
         </div>
-        <div class="nav-item">
+        <div id="nav-preferences" class="nav-item">
             Preferences
         </div>
-        <div class="nav-item">
+        <div id="nav-profile" class="nav-item">
             Profile
         </div>
     </div>
